<resources>
    <string name="app_name">Weather</string>
    <string name="str_cityname">Chennai, IN</string>
    <string name="str_date">20 Oct 2019, 10:08 AM</string>
    <string name="str_temp">29.17°C</string>
    <string name="str_mintemperature">Min Temp: 05:05 AM</string>
    <string name="str_temp_max">Max Temp: 05:05 PM</string>
    <string name="str_dummystaus">Clear Sky</string>
    <string name="str_sunrise">Sunrise</string>
    <string name="str_sunrise_time">06:40 AM</string>
    <string name="str_desc">Weather_info</string>
    <string name="str_about">About</string>
    <string name="str_humidity">Humidity</string>
    <string name="str_pressure">Pressure</string>
    <string name="str_wind">Wind</string>
    <string name="str_sunset">Sunset</string>
    <string name="str_degree">°C</string>
    <string name="str_windvalue">14</string>
    <string name="str_pressurevalue">123456789</string>
    <string name="str_humidityvalue">25</string>
    <string name="home">Home</string>
    <string name="city">City</string>
    <string name="help">Help</string>
</resources>